--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
     <version>2.22.0</version>
     <configuration>
      <suiteXmlFiles>
-       <suiteXmlFile>Build\index.xml</suiteXmlFile>  
+       <suiteXmlFile>Build\RedBusIndex.xml</suiteXmlFile>  
+       <!-- <suiteXmlFile>Build\index.xml</suiteXmlFile>   -->
      </suiteXmlFiles>
      <reportsDirectory>test-output</reportsDirectory> 
      
